# Workshop1

./: .env.example  .gitignore  CMakeLists.txt
include/DatabaseManager/: DatabaseManager.h
include/identity/: AdminUI.h  AuthUI.h  StaffUI.h
include/identity/AccountManager/: AccountManager.h
include/identity/Auth/: Auth.h
include/identity/Customer/: Customer.h
include/identity/Profile/: Profile.h
include/identity/Staff/: Staff.h
include/identity/Users/: Users.h
include/inventory/: InventoryUI.h
include/inventory/Apparel/: Apparel.h
include/inventory/Shops/: Shops.h
include/tool/: CLIComponents.h  Colors.h  DateHelper.h  EnvHelper.h  helper.h  input.h
include/transaction/Rental/: AdminStats.h  Rental.h
include/transaction/Rental_Details/: Rental_Details.h
src/: main.cpp
src/Apparel/: Apparel.cpp  Apparel.h
src/Bank_Account/: Bank_Account.cpp  Bank_Account.h
src/Customers/: Customers.cpp  Customers.h
src/DatabaseManager/: DatabaseManager.cpp  DatabaseManager.h
src/Rental/: Rental.cpp  Rental.h
src/Rental_Details/: Rental_Details.cpp  Rental_Details.h
src/Shops/: Shops.cpp  Shops.h
src/Staff/: Staff.cpp  Staff.h
src/Users/: Users.cpp  Users.h
src/identity/: AdminUI.cpp  AuthUI.cpp  StaffUI.cpp
src/identity/AccountManager/: AccountManager.cpp
src/identity/Admin/: AdminDashboard.cpp  AdminReportsUI.cpp  AdminShopUI.cpp  AdminStaffUI.cpp
src/identity/Admin/Reports/: BranchPerformanceReport.cpp  CostumePopularityReport.cpp  InventoryQualityReport.cpp  InvoiceLedgerReport.cpp  MonthlyRevenueReport.cpp  ReportsInternal.h
src/identity/Auth/: Auth.cpp
src/identity/Customer/: Customer.cpp  CustomerBankUI.cpp  CustomerDashboard.cpp  CustomerProfileUI.cpp  CustomerRentalHistoryUI.cpp
src/identity/Profile/: Profile.cpp  Profile.h
src/identity/Staff/: Staff.cpp  StaffDashboard.cpp  StaffInventoryUI.cpp  StaffRentalsUI.cpp
src/identity/Users/: Users.cpp  Users.h
src/inventory/: InventoryCatalogUI.cpp  InventoryCheckoutUI.cpp  InventoryInternal.h  InventoryRegisterUI.cpp  InventoryUI.cpp
src/inventory/Apparel/: Apparel.cpp
src/inventory/Shops/: Shops.cpp  Shops.h
src/tool/: CLIComponents.cpp  DateHelper.cpp  EnvHelper.cpp  helper.cpp  input.cpp
src/transaction/Rental/: AdminStats.cpp  Rental.cpp  Rental.h  RentalCreation.cpp  RentalInternal.h  RentalQueries.cpp  RentalReturn.cpp
src/transaction/Rental_Details/: Rental_Details.cpp  Rental_Details.h
tool/: tool.cpp  tool.h
